@@ -162,11 +162,12 @@ Here's a list of the inputs and options which can be specifed in the config file
       FitBlind         -> specify is real data or Asimov data should be used in the fit (TRUE or FALSE). By default, fit are NOT blind.
       POIAsimov        -> value of the parameter of interest in the AsimovDataset used in the fit
       NPValues         -> values of the nuisance parameters used to build the fit. Coma-separated list of NP:value (e.g. alpha_ttbarbb_XS:1,alpha_ttbarbcc_XS:1.5)
+      StatOnly         -> the fit ignores systematics (but not MC stat - this needs to be switched off separately)
 
     Limit:
       LimitType        -> can be ASYMPTOTIC or TOYS (the latter is not yet supported)
       LimitBlind       -> can be TRUE or FALSE (TRUE means that ALL regions are blinded)
-      POIAsimov   -> value of the POI to inject in the Asimov dataset in LimitBlind is set to TRUE
+      POIAsimov        -> value of the POI to inject in the Asimov dataset in LimitBlind is set to TRUE
       
     Region:
       VariableTitle    -> it's the label which will be displayed on the x-axis in the plots
@@ -256,9 +257,7 @@ Currently the supported options are:
       Samples:     to limit the samples to use to the list specified
       Systematics: to limit the systematics to use to the list specified
       Exclude:     to exclude certain Regions / Samples / Systematics
-      Suffix:      used for: plots, workspace, NOT for histograms file
-      SaveSuf:     used for outout histograms file and for plots
-      LoadSuf:     used for input workspace, fit results, etc...
+      Suffix:      used for: plots, workspace, fit resutls, etc
       Update:      if =TRUE, the output .root file is updated, otherwise is overwrote
 Note: the wild-card * is supported, but only as last character.
 Example:
