@@ -17,7 +17,7 @@ Job: "ttH2015"
   NtupleName: "nominal"
   DebugLevel: 0
   MCstatThreshold: 0.10
-%   SystControlPlots: TRUE
+  SystControlPlots: TRUE
   SystPruningShape: 0.01
   SystPruningNorm: 0.01
 %   CorrelationThreshold: 0.20
@@ -32,6 +32,9 @@ Job: "ttH2015"
 Fit: "fit"
   FitType: SPLUSB
   FitRegion: CRSR
+%   StatOnly: TRUE
+%   FitBlind: TRUE
+%   StatOnly: TRUE
 
 % --------------- %
 % ---  LIMIT    --- %
@@ -39,6 +42,7 @@ Fit: "fit"
 
 Limit: "limit"
   LimitType: ASYMPTOTIC
+%   LimitBlind: TRUE
 
 % --------------- %
 % --- REGIONS --- %
